fix: overflow body styles

--- a/static/styles/general.css
+++ b/static/styles/general.css
@@ -5,8 +5,6 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
-
-    overflow: hidden;
 }
 
 @font-face {
